--- a/public/style.css
+++ b/public/style.css
@@ -3,13 +3,10 @@ html {
 }
 body {
   font-family: "Neue Haas Unica W01 Regular", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 11px;
   color: white;
-  padding: 12em 20%;
+  padding: 2.4em 10%;
   background: #16726b;
-  /*background: -moz-linear-gradient(top, rgba(16,204,191,1) 0%, rgba(135,135,135,1) 82%, rgba(135,135,135,1) 100%);
-  background: -webkit-linear-gradient(top, rgba(16,204,191,1) 0%, rgba(135,135,135,1) 82%, rgba(135,135,135,1) 100%);
-  background: linear-gradient(to bottom, rgba(16,204,191,1) 0%, rgba(135,135,135,1) 82%, rgba(135,135,135,1) 100%);*/
 }
 h1 {
   font-size: 2rem;
@@ -17,8 +14,19 @@ h1 {
   margin: 0;
 }
 h2 {
-  font-size: 1.2rem;
-  font-weight: normal;
+  margin-top: 0;
+  font-size: 1.1rem;
+  font-weight: bolder;
+}
+h3, h3 a {
+  font-size: 0.9rem;
+  font-weight: bolder;
+  color: #b1b5b4;
+  text-decoration: none;
+}
+a {
+  color: #b1b5b4;
+  text-decoration: none;
 }
 ul {
   list-style: none;
@@ -26,21 +34,53 @@ ul {
 }
 .app {
   margin: 0 auto;
-  width: 50%;
+  width: 64%;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+.flex .col {
+  padding: 0 0.8rem;
+}
+.flex .half {
+  width: 46%;
+}
+.flex .section {
+  padding: 0.8rem;
+  border: 1px solid white;
+  border-radius: 0.4rem;
 }
 .divider {
   font-family: "Arial", sans-serif;
   font-size: 4rem;
-  color: grey;
-  margin-bottom: 1rem;
+  color: #b1b5b4;
+  margin: -16px 0;
+}
+.description {
+  font-size: 0.9rem;
+}
+.description p {
+  line-height: 1.2rem;
 }
 input {
-  margin: 0.4rem 0;
-  width: 30%;
+  margin: 0.2rem 0;
+  width: 100%;
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid grey;
+  color: white;
+  background: none;
+  outline: none;
+}
+input:focus {
+  outline: none;
 }
 .button {
+  margin-top: 0.2rem;
   background: #187a72;
-  border: 2px solid grey;
+  border: 2px solid #b1b5b4;
   color: white;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
