--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ html {
 }
 body {
   font-family: "Neue Haas Unica W01 Regular", Helvetica, Arial, sans-serif;
-  font-size: 11px;
+  font-size: 12px;
   color: white;
   padding: 2.4em 10%;
   background: #16726b;
@@ -31,6 +31,16 @@ a {
 ul {
   list-style: none;
   padding-left: 0;
+}
+li {
+  text-align: center;
+  border: 1px solid white;
+  border-radius: 0.4rem;
+  line-height: 1.4rem;
+  margin-bottom: 0.2rem;
+}
+#jsonstr {
+  line-height: 1rem;
 }
 .app {
   margin: 0 auto;
